--- a/java/res/values/strings-appname.xml
+++ b/java/res/values/strings-appname.xml
@@ -21,7 +21,7 @@
 <resources>
     <!-- Application name for opensource Android keyboard. AOSP(Android Open Source Project) should not be translated.
          This resource should be copied from msgid="8250992613616792321" -->
-    <string name="english_ime_name">FUTO Keyboard</string>
+    <string name="english_ime_name">Nothing Keyboard</string>
 
     <!-- Name of Android spell checker service. AOSP(Android Open Source Project) should not be translated.
          This resource should be copied from msgid="511950477199948048" -->
