--- a/java/res/values/strings-uix.xml
+++ b/java/res/values/strings-uix.xml
@@ -12,6 +12,7 @@
     <string name="undo_action_title">Undo</string>
     <string name="redo_action_title">Redo</string>
     <string name="text_edit_action_title">Text Editor</string>
+    <string name="text_enhance_action_title">Enhance Selected Text</string>
     <string name="mem_debug_action_title">Debug Info</string>
     <string name="more_actions_action_title">All Actions</string>
 
