--- a/java/res/values/strings-uix.xml
+++ b/java/res/values/strings-uix.xml
@@ -25,6 +25,7 @@
     <string name="amoled_dark_theme_name">AMOLED Dark Purple</string>
     <string name="amoled_nothing_theme_name">Nothing</string>
     <string name="nothing_light_theme_name">Nothing Light</string>
+    <string name="nothing_dark_theme_name">Nothing Dark</string>
     <string name="classic_material_dark_theme_name">AOSP Material Dark</string>
     <string name="classic_material_light_theme_name">AOSP Material Light</string>
     <string name="voice_input_theme_name">FUTO VI Theme</string>
