--- a/java/res/values/strings-uix.xml
+++ b/java/res/values/strings-uix.xml
@@ -41,6 +41,7 @@
     <string name="sunflower_theme_name">Sunflower</string>
     <string name="cotton_candy_theme_name">Cotton Candy</string>
 
+    <string name="dynamic_nothing_theme_name">Dynamic Nothing</string>
     <string name="dynamic_system_theme_name">Dynamic Auto</string>
     <string name="dynamic_light_theme_name">Dynamic Light</string>
     <string name="dynamic_dark_theme_name">Dynamic Dark</string>
