--- a/java/res/xml/row_qwerty_bottom1.xml
+++ b/java/res/xml/row_qwerty_bottom1.xml
@@ -21,36 +21,25 @@
 <merge
     xmlns:latin="http://schemas.android.com/apk/res-auto"
 >
-    <include
-        latin:keyboardLayout="@xml/key_styles_common" />
-    <include latin:keyboardLayout="@xml/row_number_switch" />
-    <Row
-        latin:keyWidth="10%p"
-    >
-        <include
-            latin:keyboardLayout="@xml/rowkeys_qwerty1" />
-    </Row>
-    <Row
-        latin:keyWidth="10%p"
-    >
-        <include
-            latin:keyboardLayout="@xml/rowkeys_qwerty2"
-            latin:keyXPos="5%p" />
-    </Row>
     <Row
         latin:keyWidth="10%p"
     >
         <Key
-            latin:keyStyle="shiftKeyStyle"
-            latin:keyWidth="15%p"
-            latin:visualInsetsRight="1%p" />
-        <include
-            latin:keyboardLayout="@xml/rowkeys_qwerty3" />
+            latin:keyStyle="toSymbolKeyStyle"
+            latin:keyWidth="15%p" />
         <Key
-            latin:keyStyle="deleteKeyStyle"
-            latin:keyWidth="fillRight"
-            latin:visualInsetsLeft="1%p" />
+            latin:keySpec="!text/keyspec_comma"
+            latin:keyLabelFlags="hasPopupHint|preserveCase"
+            latin:moreKeys="!icon/emoji_action_key|!code/key_emoji"
+            latin:backgroundType="functional"
+            />
+        <include
+            latin:keyXPos="25%p"
+            latin:keyboardLayout="@xml/key_space_5kw" />
+        <include
+            latin:keyboardLayout="@xml/key_period" />
+        <Key
+            latin:keyStyle="enterKeyStyle"
+            latin:keyWidth="fillRight" />
     </Row>
-    <include
-        latin:keyboardLayout="@xml/row_qwerty_bottom1" />
 </merge>
